refactor: rename classes and declare schedule settings

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,5 +3,8 @@
     "SsiBaseAddress": "https://fc-data.ssi.com.vn/api/v2/",
     "ConsumerId": "",
     "ConsumerSecrect": ""
+  },
+  "ScheduleSettings": {
+    "FetchDataIntervalInSecond": 15
   }
 }
