refactor: change SSI endpoint and handle latest price

--- a/stockwatch/stockwatch.csproj
+++ b/stockwatch/stockwatch.csproj
@@ -59,6 +59,8 @@
 	<ItemGroup>
 	  <None Remove="appsettings.json" />
 	  <None Remove="appsettings.local.json" />
+	  <None Remove="Resources\Images\find_stock.png" />
+	  <None Remove="Resources\Images\my_stock.png" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -102,6 +104,12 @@
 	    <Generator>ResXFileCodeGenerator</Generator>
 	    <LastGenOutput>AppResources.Designer.cs</LastGenOutput>
 	  </EmbeddedResource>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="FindPotentialSymbol.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
