feat: add loading popup service and basic potential symbol analysis

--- a/stockwatch/stockwatch.csproj
+++ b/stockwatch/stockwatch.csproj
@@ -24,7 +24,7 @@
 		<ApplicationTitle>stockwatch</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.stockwatch</ApplicationId>
+		<ApplicationId>com.txv.stockwatch</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -78,6 +78,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="Mopups" Version="1.3.2" />
 	</ItemGroup>
 
 	<ItemGroup Condition="( '$(TargetFramework)' == 'net8.0-android' )">
@@ -92,6 +93,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="Pages\FindPotentialSymbolPage.xaml.cs">
+	    <DependentUpon>FindPotentialSymbolPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="Resources\Strings\AppResources.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
@@ -107,7 +111,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="FindPotentialSymbol.xaml">
+	  <MauiXaml Update="Pages\FindPotentialSymbolPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Popups\LoadingPopup.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
