refactor: add default settings and remove TODOs

--- a/stockwatch/appsettings.json
+++ b/stockwatch/appsettings.json
@@ -4,6 +4,10 @@
     "ConsumerId": "",
     "ConsumerSecrect": ""
   },
+  "PotentialSymbolSettings": {
+    "MaxSymbolsFromMarket": 10,
+    "MaxMonthsToAnalyze": 1
+  },
   "ScheduleSettings": {
     "FetchDataIntervalInSecond": 60
   }
