--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,30 +1,29 @@
 ﻿<Project>
-	<PropertyGroup>
-		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-	</PropertyGroup>
-	<ItemGroup>
-		<PackageVersion Include="Humanizer.Core" Version="2.14.1" />
-		<PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
-		<PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
-		<PackageVersion Include="Plugin.LocalNotification" Version="11.1.4" />
-		<PackageVersion Include="Scrutor" Version="5.0.2" />
-		<PackageVersion Include="Serilog" Version="4.2.0" />
-		<PackageVersion Include="Serilog.Extensions.Hosting" Version="8.0.0" />
-		<PackageVersion Include="Serilog.Sinks.Debug" Version="3.0.0" />
-		<PackageVersion Include="Serilog.Sinks.File" Version="6.0.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageVersion Include="CommunityToolkit.Maui" Version="8.0.1" />
-		<PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
-		<PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-		<PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-		<PackageVersion Include="Mopups" Version="1.3.2" />
-	</ItemGroup>
-
-	<ItemGroup Condition="( '$(TargetFramework)' == 'net8.0-android' )">
-		<PackageVersion Include="Xamarin.AndroidX.Collection" Version="1.4.5.1" />
-		<PackageVersion Include="Xamarin.AndroidX.Preference" Version="1.2.1.11" />
-	</ItemGroup>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageVersion Include="Humanizer.Core" Version="2.14.1" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+    <PackageVersion Include="Plugin.LocalNotification" Version="11.1.4" />
+    <PackageVersion Include="Scrutor" Version="5.0.2" />
+    <PackageVersion Include="Serilog" Version="4.2.0" />
+    <PackageVersion Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+    <PackageVersion Include="Serilog.Sinks.Debug" Version="3.0.0" />
+    <PackageVersion Include="Serilog.Sinks.File" Version="6.0.0" />
+    <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.6.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Include="CommunityToolkit.Maui" Version="8.0.1" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+    <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+    <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+    <PackageVersion Include="Mopups" Version="1.3.2" />
+  </ItemGroup>
+  <ItemGroup Condition="( '$(TargetFramework)' == 'net8.0-android' )">
+    <PackageVersion Include="Xamarin.AndroidX.Collection" Version="1.4.5.1" />
+    <PackageVersion Include="Xamarin.AndroidX.Preference" Version="1.2.1.11" />
+  </ItemGroup>
 </Project>
