--- a/stockwatch/Platforms/Android/AndroidManifest.xml
+++ b/stockwatch/Platforms/Android/AndroidManifest.xml
@@ -5,4 +5,5 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 </manifest>
