--- a/stockwatch/Platforms/Android/AndroidManifest.xml
+++ b/stockwatch/Platforms/Android/AndroidManifest.xml
@@ -6,4 +6,5 @@
 	<uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 </manifest>
