--- a/stockwatch/appsettings.json
+++ b/stockwatch/appsettings.json
@@ -4,6 +4,10 @@
     "ConsumerId": "",
     "ConsumerSecrect": ""
   },
+  "FirebaseSettings": {
+    "ProjectId": "",
+    "Credential": {}
+  },
   "PotentialSymbolSettings": {
     "MaxSymbolsFromMarket": 10,
     "MaxMonthsToAnalyze": 1
