feat: add FirestoreRestApiResponse to access Firestore Database with REST Api protocal

--- a/stockwatch/appsettings.json
+++ b/stockwatch/appsettings.json
@@ -6,6 +6,8 @@
   },
   "FirebaseSettings": {
     "ProjectId": "",
+    "ApiKey": "",
+    "FirestoreEndpoint": "",
     "Credential": {}
   },
   "PotentialSymbolSettings": {
