--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Setup Keystore File
       run: |
-        echo "${{ secrets.KEYSTORE_FILE }} > stockwatch.keystore.asc
+        echo "${{ secrets.KEYSTORE_FILE }}" > stockwatch.keystore.asc
         gpg -d --passphrase "${{ secrets.KEYSTORE_PASSWORD_GPG }}" --batch stockwatch.keystore.asc > stockwatch.keystore
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
