--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,9 @@ jobs:
         echo "${{ secrets.KEYSTORE_FILE }}" > stockwatch.keystore.asc
         gpg -d --passphrase "${{ secrets.GPG_PASSWORD }}" --batch stockwatch.keystore.asc > stockwatch.keystore
     - name: Setup appsettings.local.json File
-      run: echo "${{ secrets.APP_SETTINGS_FILE }}" > stockwatch/appsettings.local.json
+      run: |
+        echo "${{ secrets.APP_SETTINGS_FILE }}" > stockwatch/appsettings.local.json.asc
+        gpg -d --passphrase "${{ secrets.GPG_PASSWORD }}" --batch appsettings.local.json.asc > appsettings.local.json
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
