--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,11 +19,11 @@ jobs:
     - name: Setup Keystore File
       run: |
         echo "${{ secrets.KEYSTORE_FILE }}" > stockwatch.keystore.asc
-        gpg -d --passphrase "${{ secrets.GPG_PASSWORD }}" --batch stockwatch.keystore.asc > stockwatch.keystore
+        gpg -d --passphrase "${{ secrets.KEYSTORE_FILE_GPG_PASSWORD }}" --batch stockwatch.keystore.asc > stockwatch.keystore
     - name: Setup appsettings.local.json File
       run: |
         echo "${{ secrets.APP_SETTINGS_FILE }}" > stockwatch/appsettings.local.json.asc
-        gpg -d --passphrase "${{ secrets.GPG_PASSWORD }}" --batch stockwatch/appsettings.local.json.asc > stockwatch/appsettings.local.json
+        gpg -d --passphrase "${{ secrets.APP_SETTINGS_FILE_GPG_PASSWORD }}" --batch stockwatch/appsettings.local.json.asc > stockwatch/appsettings.local.json
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
