--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,10 +28,16 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - uses: actions/setup-java@v2
+      with:
+        distribution: 'microsoft'
+        java-version: '11'
     - name: Install .NET MAUI
-      run: dotnet workload install maui
+      run: |
+        dotnet workload install android --ignore-failed-sources
+        dotnet workload install maui --ignore-failed-sources
     - name: Build
-      run: dotnet publish stockwatch/stockwatch.csproj -f net8.0-android -p:RuntimeIdentifiers="android-x64;android-arm64" -p:AndroidPackageFormat=apk -p:AndroidKeyStore=true -p:AndroidSigningKeyStore=stockwatch.keystore -p:AndroidSigningKeyAlias=stockwatch -p:AndroidSigningKeyPass="${{ secrets.KEYSTORE_KEYPASS }}" -p:AndroidSigningStorePass="${{ secrets.KEYSTORE_STOREPASS }}"
+      run: dotnet publish stockwatch/stockwatch.csproj -f net8.0-android /p:AndroidPackageFormat=apk /p:AndroidKeyStore=true -p:AndroidSigningKeyStore=stockwatch.keystore /p:AndroidSigningKeyAlias=stockwatch /p:AndroidSigningKeyPass="${{ secrets.KEYSTORE_KEYPASS }}" /p:AndroidSigningStorePass="${{ secrets.KEYSTORE_STOREPASS }}"
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.6.2
       with:
