--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,8 +36,8 @@ jobs:
       run: |
         dotnet workload install android --ignore-failed-sources
         dotnet workload install maui --ignore-failed-sources
-    - name: Build
-      run: dotnet publish stockwatch/stockwatch.csproj -f net8.0-android /p:AndroidPackageFormat=apk /p:AndroidKeyStore=true -p:AndroidSigningKeyStore=stockwatch.keystore /p:AndroidSigningKeyAlias=stockwatch /p:AndroidSigningKeyPass="${{ secrets.KEYSTORE_KEYPASS }}" /p:AndroidSigningStorePass="${{ secrets.KEYSTORE_STOREPASS }}"
+    - name: Publish
+      run: dotnet publish stockwatch/stockwatch.csproj -f:net8.0-android -c:Release /p:AndroidPackageFormat=apk /p:AndroidKeyStore=true /p:AndroidSigningKeyStore=stockwatch.keystore /p:AndroidSigningKeyAlias=stockwatch /p:AndroidSigningKeyPass="${{ secrets.KEYSTORE_KEYPASS }}" /p:AndroidSigningStorePass="${{ secrets.KEYSTORE_STOREPASS }}"
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.6.2
       with:
