--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Setup Keystore File
       run: |
-        echo "${{ secrets.KEYSTORE_FILE }}" > stockwatch.keystore.asc
-        gpg -d --passphrase "${{ secrets.KEYSTORE_FILE_GPG_PASSWORD }}" --batch stockwatch.keystore.asc > stockwatch.keystore
+        echo "${{ secrets.KEYSTORE_FILE }}" > stockwatch/stockwatch.keystore.asc
+        gpg -d --passphrase "${{ secrets.KEYSTORE_FILE_GPG_PASSWORD }}" --batch stockwatch/stockwatch.keystore.asc > stockwatch/stockwatch.keystore
     - name: Setup appsettings.local.json File
       run: |
         echo "${{ secrets.APP_SETTINGS_FILE }}" > stockwatch/appsettings.local.json.asc
@@ -30,24 +30,17 @@ jobs:
         dotnet-version: 8.0.x
     - name: Check nuget version
       run: dotnet nuget --version
-    - name: Setup Nuget
-      uses: nuget/setup-nuget@v2
-      with:
-        nuget-version: 'latest'
+    #- name: Setup Nuget
+    #  uses: nuget/setup-nuget@v2
+    #  with:
+    #    nuget-version: 'latest'
     - name: Install .NET MAUI
       run: dotnet workload install maui --ignore-failed-sources
     - name: Restore dependencies
-      run: |
-        nuget ?
-        nuget restore stockwatch.sln
-    - name: Upload project.assets.json
-      uses: actions/upload-artifact@v4.6.2
-      with:
-        path: ./**/project.assets.json
+    #  run: nuget restore stockwatch.sln
+      run: dotnet restore stockwatch/stockwatch.csproj
     - name: Publish
-      run: |
-        dotnet nuget --version
-        dotnet publish stockwatch/stockwatch.csproj -f:net8.0-android -c:Release /p:AndroidPackageFormat=apk /p:AndroidKeyStore=true /p:AndroidSigningKeyStore=stockwatch.keystore /p:AndroidSigningKeyAlias=stockwatch /p:AndroidSigningKeyPass="${{ secrets.KEYSTORE_KEYPASS }}" /p:AndroidSigningStorePass="${{ secrets.KEYSTORE_STOREPASS }}" --no-restore
+      run: dotnet publish stockwatch/stockwatch.csproj -f:net8.0-android -c:Release /p:AndroidPackageFormat=apk /p:AndroidKeyStore=true /p:AndroidSigningKeyStore=stockwatch.keystore /p:AndroidSigningKeyAlias=stockwatch /p:AndroidSigningKeyPass="${{ secrets.KEYSTORE_KEYPASS }}" /p:AndroidSigningStorePass="${{ secrets.KEYSTORE_STOREPASS }}" --no-restore
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.6.2
       with:
