--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,6 +9,9 @@ on:
   #pull_request:
   #  branches: [ "main" ]
 
+env:
+  ANDROID_RIDS: android-arm64;android-x64
+  
 jobs:
   build:
 
@@ -24,6 +27,9 @@ jobs:
       run: |
         echo "${{ secrets.APP_SETTINGS_FILE }}" > stockwatch/appsettings.local.json.asc
         gpg -d --passphrase "${{ secrets.APP_SETTINGS_FILE_GPG_PASSWORD }}" --batch stockwatch/appsettings.local.json.asc > stockwatch/appsettings.local.json
+    - name: Inject RuntimeIdentifiers (for android) into csproj
+      run: |
+        sed -i 's|<PropertyGroup>|<PropertyGroup><RuntimeIdentifiers>${{ env.ANDROID_RIDS }}</RuntimeIdentifiers>|' stockwatch/stockwatch.csproj
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
