feat: use ssi-stream to get latest price

--- a/stockwatch/appsettings.json
+++ b/stockwatch/appsettings.json
@@ -1,6 +1,9 @@
 ﻿{
   "SsiSettings": {
     "SsiBaseAddress": "https://fc-data.ssi.com.vn/api/v2/",
+    "SsiStreamBaseAddress": "https://fc-datahub.ssi.com.vn/",
+    "HubEndpoint": "v2.0/signalr",
+    "HubName": "FcMarketDataV2Hub",
     "ConsumerId": "",
     "ConsumerSecrect": ""
   },
